# rubiks-cube-kangyu

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  PERFORMANCE_IMPROVEMENTS.md  README.md  TESTING.md  first-resolved-by-ives.txt  fixed-rotat-S.patch  settings.json  test_history  test_history.cpp  test_r_move.cpp  test_undo  test_undo.cpp  test_undo10  test_undo10.cpp  test_undo2  test_undo2.cpp  test_undo3  test_undo3.cpp  test_undo4  test_undo4.cpp  test_undo5  test_undo5.cpp  test_undo6  test_undo6.cpp  test_undo7  test_undo7.cpp  test_undo8  test_undo8.cpp  test_undo9  test_undo9.cpp
.sisyphus/: boulder.json
.sisyphus/notepads/cube-renderer-refactor/: learnings.md
.sisyphus/notepads/double-move-support/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/double-moves-research/: learnings.md
.sisyphus/plans/: cube-renderer-refactor.md  double-move-support.md  fix-broken-tests.md  fix-formula-tests.md  main-refactor.md
docs/: CLAUDE.md  NoteBook.md  code-quality-report.md  macos-porting-report.md  test-coverage-report.md
formula/: DoubleMove.txt  FunyParttern.txt  OLL常用公式.txt  小鱼公式.txt  循环测试.txt
src/: animator.cpp  animator.h  app.cpp  app.h  color.cpp  color.h  color_provider.cpp  color_provider.h  config.cpp  config.h  cube.cpp  cube.h  cube_animator.cpp  cube_animator.h  formula.cpp  formula.h  gl_loader.h  irenderer_3d.h  main.cpp  model.cpp  model.h  move.cpp  move.h  move_utils.h  renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.h  renderer_3d.h  renderer_3d_opengl.cpp  renderer_3d_opengl.h  renderer_3d_shader.cpp  renderer_3d_shader.h  shader.cpp  shader.h  view_state.cpp  view_state.h
src/shaders/: cubie.frag.glsl  cubie.vert.glsl  fragment.glsl  vertex.glsl
tests/: test_axis_rotate.cpp  test_color_validation.cpp  test_cube.cpp  test_cube_2step.cpp  test_formula.cpp  test_formula_ref.cpp  test_ref_verify.cpp
tests/ref/: ref_cube.cpp  ref_cube.h
